--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,9 @@ import Section from '@/components/home/Section.astro'
 import SkillLayout from '@/components/home/SkillLayout.astro'
 import config from '@/site-config'
 
-const languages = ['Html', 'JavaScript', 'CSS', 'Shell']
-const frontend = ['TypeScript', 'Vite', 'Webpack', 'Astro']
-const backend = ['Vercel', 'Waline']
+const languages = ['Python', 'C++', 'TypeScript', 'HTML']
+const frontend = ['TypeScript', 'HTML']
+const backend = ['Vercel', 'Server Ops']
 
 const MAX_POSTS = 10
 const allPosts = await getBlogCollection()
@@ -111,6 +111,25 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         />
       </Section>
 
+      <Section title='Friends'>
+        <a href='http://heliang.tech' target='_blank' class='no-underline'>
+          <div class='group relative h-full overflow-hidden rounded-2xl border bg-background px-4 py-2 transition-colors hover:bg-muted'>
+            <div class='relative z-10 flex h-full items-center gap-3'>
+              <img
+                src='/hl.png'
+                alt='avatar'
+                class='h-12 w-12 min-w-12 rounded-full border bg-white'
+                loading='lazy'
+              />
+              <div class='flex flex-col'>
+                <p class='my-0 text-sm'>贺亮</p>
+                <p class='my-0 text-xs text-muted-foreground'>恩师</p>
+              </div>
+            </div>
+          </div>
+        </a>
+      </Section>
+
       { /*
       <Section title='Website List'>
         <div class='grid grid-cols-1 gap-3 sm:grid-cols-2'>
@@ -142,15 +161,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       </Section>
       */ }
 
-      <Section title='Certifications'>
-        <Card
-          as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio possit voluptatum. Dicat ceteros cu vim. Impetus fuisset ullamcorper pri cu, his posse iisque ad, aliquam honestatis usu id.'
-          date='July 2024'
-          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
-        />
-      </Section>
+      
 
       <Section title='Skills'>
         <SkillLayout title='Languages' skills={languages} />
