--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='About'>
         <p class='text-muted-foreground'>游戏化编程学习</p>
         <p class='text-muted-foreground'>
-          我们以联盟形式推进编程学习的游戏化与实践化，连接学习者与项目，通过技术与组织力提升学习体验与成果。
+          我们以联盟形式推进编程学习的游戏化与实践化，通过技术与组织力提升学习体验与成果。
         </p>
         <Button title='More about us' class='w-fit self-end' href='/about' variant='ahead' />
       </Section>
