--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       </Section>
 
       <Section title='Friends'>
-        <a href='http://heliang.tech' target='_blank' class='no-underline'>
+        <a href='http://bclm.fun/about' target='_blank' class='no-underline'>
           <div class='group relative h-full overflow-hidden rounded-2xl border bg-background px-4 py-2 transition-colors hover:bg-muted'>
             <div class='relative z-10 flex h-full items-center gap-3'>
               <img
