--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
       {/* Get template */}
       <a
-        href='https://github.com/cworld1/astro-theme-pure'
+        href='https://github.com/billwgong'
         target='_blank'
         class='flex flex-row items-center gap-x-3 rounded-full border bg-background px-4 py-2 text-sm shadow-sm transition-shadow hover:shadow-md'
       >
@@ -98,7 +98,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           date='Nov 2025 - Present'
         />
         <Card
-          heading='Program of Legend'
+          heading='program of legend'
           subheading='运营宣传'
           date='Nov 2021 - Jul 2025'
         />
