fix: 修正地理位置显示中的重复国家信息
将"Shenzhen, China，China"修改为"Shenzhen, Guangdong, China"，移除重复的国家信息并添加省份信息

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <div class='flex flex-col items-center gap-y-4'>
         <h1 class='text-3xl font-bold'>{config.author}</h1>
         <div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-          <Label title='Shenzhen, China，China'>
+          <Label title='Shenzhen, Guangdong, China'>
             <Icon name='location' class='size-5' slot='icon' />
           </Label>
           <Label title='X' as='a' href='https://x.com/yankaxh1207' target='_blank'>
@@ -47,7 +47,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         </div>
       </div>
 
-      {/* Get template */}
+    
       <a
         href='https://github.com/billwgong'
         target='_blank'
