--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -32,7 +32,7 @@ const linkEditPage = 'https://github.com/cworld1/astro-theme-pure/blob/main/publ
 
   <!-- apply-links -->
   <h2 id='apply-links'>Apply Links</h2>
-  <p>本站信息（点击复制）The site information (click to copy)：</p>
+  <p>本站信息如下 The site information（点击快速复制）：</p>
   <blockquote class='not-prose grid grid-cols-[auto_1fr] gap-x-2 break-words border-s-4 ps-4'>
     {
       linksConf.applyTip.map(({ name, val }) => {
@@ -50,14 +50,13 @@ const linkEditPage = 'https://github.com/cworld1/astro-theme-pure/blob/main/publ
   </blockquote>
 
   <p>
-    可通过下方留言或 <a href={linkEditPage} target='_blank'>提交 PR</a> 申请友链。此外申请说明：<br
-    />
-    Apply your link by leaving comment or <a href={linkEditPage} target='_blank'>Submitting a PR</a
-    >. Additional info:
+    可通过下方留言或 <a href={linkEditPage} target='_blank'>提交 PR</a> 申请友链。此外申请说明：<br />
+    Apply your link by leaving comment or <a href={linkEditPage} target='_blank'>Submitting a PR</a>.
   </p>
   <ul>
-    <li>在你的友链上添加了本站. You've recommended this site on your website.</li>
-    <li>请确保你的站点活着. Make sure your site is alive.</li>
-    <li>博客内容不违反国家法律. Content does not violate common laws.</li>
+    <li>在你的友链上添加了本站； You've added this site to your blogroll.</li>
+    <li>请确保你的站点活着； Make sure your site is alive.</li>
+    <li>内容不违反任何国家法律； Content does not violate any country's laws.</li>
+    <li>在中国大陆/全球的访问速度良好； Good access speed in Mainland China/global.</li>
   </ul>
 </PageLayout>
