feat: 添加贺亮链接并更新GitHub地址
在links.json中添加贺亮的个人链接信息，并在首页社交链接中新增贺亮入口

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,11 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <Label title='X' as='a' href='https://x.com/yankaxh1207' target='_blank'>
             <Icon name='x' class='size-5' slot='icon' />
           </Label>
-          <Label title='GitHub' as='a' href='https://github.com/billwgong' target='_blank'>
+          <Label title='GitHub' as='a' href='https://github.com/BillWGong/new_b/' target='_blank'>
             <Icon name='github' class='size-5' slot='icon' />
+          </Label>
+          <Label title='贺亮' as='a' href='http://heliang.tech' target='_blank'>
+            <Icon name='link' class='size-5' slot='icon' />
           </Label>
           <Label title='Instagram' as='a' href='https://instagram.com/billw_cn' target='_blank'>
             <Icon name='instagram' class='size-5' slot='icon' />
