--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,6 +35,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <Label title='Shenzhen, Guangdong, China'>
             <Icon name='location' class='size-5' slot='icon' />
           </Label>
+		  <Label title='Bonjour.bio/billw'>
           <Label title='X' as='a' href='https://x.com/yankaxh1207' target='_blank'>
             <Icon name='x' class='size-5' slot='icon' />
           </Label>
@@ -101,6 +102,13 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           heading='program of legend'
           subheading='运营宣传'
           date='Nov 2021 - Jul 2025'
+        />
+      </Section>
+	  <Section title='Education'>
+        <Card
+          heading='2026年第二届中学生春节联欢晚会'
+          subheading='技术负责人'
+          date='Sep 2024 - Nov 2025'
         />
       </Section>
       <Section title='Education'>
