--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         <h1 class='text-3xl font-bold'>{config.author}</h1>
         <div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
           <Label title='Shenzhen, Guangdong, China'>
-            <Icon name='location' class='size-5' slot='icon' /> <Label title='Bonjour.bio/billw'>
+            <Icon name='location' class='size-5' slot='icon' />
           </Label>
 		 
           <Label title='X' as='a' href='https://x.com/yankaxh1207' target='_blank'>
