--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,11 +39,11 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <Label title='X' as='a' href='https://x.com/yankaxh1207' target='_blank'>
             <Icon name='x' class='size-5' slot='icon' />
           </Label>
-          <Label title='GitHub' as='a' href='https://github.com/BillWGong/new_b/' target='_blank'>
+          <Label title='GitHub' as='a' href='https://github.com/BillWGong' target='_blank'>
             <Icon name='github' class='size-5' slot='icon' />
           </Label>
          
-          <Label title='Instagram' as='a' href='https://instagram.com/billw_cn' target='_blank'>
+          <Label title='Instagram' as='a' href='https://instagram.com/billwgong' target='_blank'>
             <Icon name='instagram' class='size-5' slot='icon' />
           </Label>
         </div>
@@ -67,7 +67,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
     <div id='content' class='animate flex flex-col gap-y-10 md:w-4/5 lg:w-5/6'>
       <Section title='About'>
-        <p class='text-muted-foreground'>Teenage diversity community founder / Web full‑stack developer / Event organizer / Product manager</p>
+        <p class='text-muted-foreground'>Teenage diversity community founder / Web full-stack developer / Event organizer / PM / Youtuber</p>
         <p class='text-muted-foreground'>
           Passionate about building inclusive communities and crafting useful digital products. Experienced in end‑to‑end web development and event operations, connecting people and ideas through technology and organization.
         </p>
@@ -93,6 +93,11 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           subheading='Founder'
           date='Nov 2020 - Present'
         />
+		 <Card
+          heading='lamo'
+          subheading='co-founder'
+          date='Dec 2025 - Present'
+        />
         <Card
           heading='YOUTHGALA'
           subheading='Builder'
@@ -104,7 +109,12 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           date='Nov 2021 - Jul 2025'
         />
       </Section>
-	  <Section title='Education'>
+	  <Section title='Projects'>
+	  <Card
+          heading='TeenList'
+          subheading='Dev'
+          date='Dec 2025 - Present'
+        />
         <Card
           heading='2026年第二届中学生春节联欢晚会'
           subheading='技术负责人'
@@ -113,9 +123,26 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       </Section>
       <Section title='Education'>
         <Card
-          heading='皇岗创新实验学校（HGIES）'
-          subheading='深圳市福田区'
+          heading='HGIES'
+          subheading='Futian,Shenzhen'
           date='Sep 2024 - Present'
+        />
+		<Card
+          heading='Huanggang Primary Schoon'
+          subheading='Futian,Shenzhen'
+          date='Sep 2024 - Present'
+        />
+      </Section>
+	  <Section title='Events'>
+	  <Card
+          heading='TRAE SOLO Hackathon SHENZHEN'
+          subheading='Contestant'
+          date='Aug 2025'
+        />
+        <Card
+          heading='HackathonWeekly AI MUSIC Hackathon'
+          subheading='Contestant & Volunteers'
+          date='Sep 2025'
         />
       </Section>
 
